--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 alt="foto ">
 
 <h3 class="profissao-nome">Nome Imagem 01</h3>
-<a href="https://linkedin.com/marcelopaludetto"><img
+<a href="https://linkedin.com"><img
 
-class="profissao-icone" src="linkedin.png"
+class="profissao-icone" src="img/linkedin.png"
 alt="icone linkedin"></a>
-<a href="https://instagram.com/marcelopaludetto"><img
+<a href="https://instagram.com"><img
 
-class="profissao-icone" src="instagram.png"
+class="profissao-icone" src="img/instagram.png"
 alt="icone instagram"></a>
 
 </div>
@@ -51,14 +51,13 @@ alt="icone instagram"></a>
 <img class="profissao-imagem" src="Gabi.jpg" alt="foto ">
 <h3 class="profissao-nome">Nome Imagem 02</h3>
 
-<a href="https://www.linkedin.com/in/gabriela-marcomini-
-de-lima/"><img class="profissao-icone"
+<a href="https://www.linkedin.com"><img class="profissao-icone"
 
-src="linkedin.png" alt="icone linkedin"></a>
+src="img/linkedin.png" alt="icone linkedin"></a>
 <a
 
-href="https://www.instagram.com/gabriela_marcomini/"><img
-class="profissao-icone" src="instagram.png"
+href="https://www.instagram.com"><img
+class="profissao-icone" src="img/instagram.png"
 alt="icone instagram"></a>
 
 </div>
@@ -66,13 +65,13 @@ alt="icone instagram"></a>
 <img class="profissao-imagem" src="Liz.jpg" alt="foto">
 <h3 class="profissao-nome">Nome Imagem 03</h3>
 
-<a href="https://www.linkedin.com/in/lizandrarlm-
-duarte/"><img class="profissao-icone"
+<a href="https://www.linkedin.com
+"><img class="profissao-icone"
 
-src="linkedin.png" alt="icone linkedin"></a>
-<a href="https://www.instagram.com/lizandrarlm"><img
+src="img/linkedin.png" alt="icone linkedin"></a>
+<a href="https://www.instagram.com"><img
 
-class="profissao-icone" src="instagram.png"
+class="profissao-icone" src="img/instagram.png"
 alt="icone instagram"></a>
 
 </div>
