--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="img/robotics.png" alt="logo-robotica">
+        <img class="cabecalho-imagem" src="img/nail-polish (1).png" alt="logo-robotica">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">ELO</li>
+            <li class="cabecalho-lista-item">NUNES</li>
         </ul>
     </header>
 
     <section class="robotica">
 
         <div class="robotica-div-conteudo">
-            <h2 class="robotica-titulo">Sobre a Robótica</h2>
-            <p class="robotica-titulo-um"> A robótica é um campo multidisciplinar que envolve conhecimentos de mecânica, eletrônica, hidráulica, pneumática e computação.</p>
-            <p class="robotica-titulo-dois"> A robótica é o estudo dos robôs, que, por sua vez, são sistemas autônomos existentes no mundo físico capazes de sentir o ambiente e agir sobre ele.</p>
+            <h2 class="robotica-titulo">unhas</h2>
+            <p class="robotica-titulo-um">Lâmina ou prato ungueal: é a parte que vemos da unha e estende-se desde a matriz até a porção livre. Possui consistência dura, está localizada sobre o leito ungueal e não tem coloração. Por essa razão, é possível perceber certa coloração rosada resultante da presença de capilares no leito ungueal. A porção livre apresenta coloração esbranquiçada, o que resulta do contato com o ar.
+
+                Lâmina ou prato ungueal: é a parte que vemos da unha e estende-se desde a matriz até a porção livre. Possui consistência dura, está localizada sobre o leito ungueal e não tem coloração. Por essa razão, é possível perceber certa coloração rosada resultante da presença de capilares no leito ungueal. A porção livre apresenta coloração esbranquiçada, o que resulta do contato com o ar.
+
+v
+
+</p>
+            <p class="robotica-titulo-dois"></p>
         </div>
-        <img class="robotica-imagem" src="img/Robotics-cuate .png" alt="robo">
+        <img class="robotica-imagem" src="img/nail-polish.png" alt="robo">
 
     </section>
     
