--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@ alt="icone instagram"></a>
 </div>
 <span></span>
 <span></span>
+</section>
+<footer class="rodape">
+<p> <strong>Samuel Freitas</strong></p>
+</footer>
 
 </body>
 </html>
