--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ alt="icone instagram"></a>
 <span></span>
 </section>
 <footer class="rodape">
-<p> <strong>Samuel Freitas</strong></p>
+<p> <strong>Elo Nunes</strong></p>
 </footer>
 
 </body>
